force-app/main/default/objects/ssot__LearningProgram__dlm/fields/ssot__ActiveFromDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActiveFromDate__c</fullName>
    <label>Active From Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActiveFromDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>