force-app/main/default/objects/ssot__LearningProgram__dlm/fields/ssot__CipCodeText__c.field-meta.xml
<CustomField>
    <fullName>ssot__CipCodeText__c</fullName>
    <label>Cip Code</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CipCodeText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>