force-app/main/default/objects/ssot__LearningProgram__dlm/fields/ssot__DoesCreateOpportunityRecord__c.field-meta.xml
<CustomField>
    <fullName>ssot__DoesCreateOpportunityRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does Create Opportunity Record</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DoesCreateOpportunityRecord</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>