force-app/main/default/objects/ssot__LearningProgram__dlm/fields/ssot__IsTopLevelProgram__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsTopLevelProgram__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Top Level Program</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsTopLevelProgram</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>