force-app/main/default/objects/ssot__LearningProgram__dlm/fields/ssot__LearningId__c.field-meta.xml
<CustomField>
    <fullName>ssot__LearningId__c</fullName>
    <label>Learning</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LearningId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>