force-app/main/default/objects/ssot__LearningProgram__dlm/fields/ssot__rel_1719817712219_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719817712219_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LearningProgram_ProviderId_map_Accou_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>LearningProgram_ProviderId_map_Accou_rel</relationshipLabel>
    <relationshipName>rel_1719817712219_end</relationshipName>
    <type>Lookup</type>
</CustomField>