force-app/main/default/objects/ssot__LearningProgram__dlm/fields/ssot__rel_1719819882620_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719819882620_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LearningProgram_LearningId_map_Learn_rel</label>
    <referenceTo>ssot__Learning__dlm</referenceTo>
    <relationshipLabel>LearningProgram_LearningId_map_Learn_rel</relationshipLabel>
    <relationshipName>rel_1719819882620_end</relationshipName>
    <type>Lookup</type>
</CustomField>